--- a/src/sass/_location.scss
+++ b/src/sass/_location.scss
@@ -1,15 +1,75 @@
-body{
-    width: 1440px;
-    .section__location__belgium{
-        display: flex; 
-        .box{
-            background-image: url();
+.section__location__belgium {
+    display: flex;
+    justify-content: center;
+    padding: 32px;
+
+    .box {
+        background-color: $pinkBg;
+        height: 326px;
+        width: 730px;
+        border-radius: 20px;
+        padding-top: 88px;
+        padding-left: 95px;
+
+        h2 {
+            color: $pink;
+        }
+
+        div {
+            height: 78px;
+            width: 255px;
+            padding-top: 24px;
         }
     }
-    .section__location__australia{
-        display: flex;
+}
+
+.section__location__australia {
+    display: flex;
+    justify-content: center;
+    padding: 32px;
+
+    .box {
+        background-color: $pinkBg;
+        height: 326px;
+        width: 730px;
+        border-radius: 20px;
+        padding-top: 88px;
+        padding-left: 95px;
+
+        h2 {
+            color: $pink;
+        }
+
+        div {
+            height: 78px;
+            width: 255px;
+            padding-top: 24px;
+        }
     }
-    .section__location__uk{
-        display: flex;
+}
+
+
+.section__location__uk {
+    display: flex;
+    justify-content: center;
+    padding: 32px;
+
+    .box {
+        background-color: $pinkBg;
+        height: 326px;
+        width: 730px;
+        border-radius: 20px;
+        padding-top: 88px;
+        padding-left: 95px;
+
+        h2 {
+            color: $pink;
+        }
+
+        div {
+            height: 78px;
+            width: 255px;
+            padding-top: 24px;
+        }
     }
 }
