--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -30,7 +30,6 @@ body {
           display: inline-block;
 
           a {
-
             text-decoration: none;
             color: $black;
 
@@ -47,60 +46,70 @@ body {
 
   main {
     .section__services {
-      background-image: url("../img/fond 1.png") ;
+      background-image: url("../img/fond 1.png");
       background-repeat: no-repeat;
       background-size: cover;
-      ;
-      height:640px ;
+      height: 640px;
       width: 1111px;
       margin: 0 auto 160px;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      div{
-        width: 540px;
-        margin: 0 476px 95px 145px ;
-        text-align: left;
-        h1{
-          color: $white;
-          font-family: $fontJ;
-          font-style: normal;
-          font-weight: 500;
-          font-size: 48px;
-          line-height: 48px;
-          margin-bottom: 11px;
-          padding-bottom: 10px;
+      article {
+        position: relative;
+        div {
+          width: 540px;
+          margin: 0 476px 95px 145px;
+          text-align: left;
+          h1 {
+            color: $white;
+            font-family: $fontJ;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 48px;
+            line-height: 48px;
+            margin-bottom: 11px;
+            padding-bottom: 10px;
+          }
+          p {
+            margin-bottom: 58px;
+            width: 445px;
+            color: $white;
+            font-family: $fontJ;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 26px;
+          }
+          a {
+            max-width: 152px;
+            max-height: 56px;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            font-family: $fontJ;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 15px;
+            line-height: 22px;
+            border-radius: 8px;
+            text-decoration: none;
+            color: $black;
+            margin: 0 auto 160px;
+          }
+
+          a:link,
+          a:visited {
+            padding: 18px 25px 16px 24px;
+            background-color: $white;
+          }
         }
-        p{
-          margin-bottom: 58px;
-          width:445px;
-          color: $white;
-          font-family: $fontJ;
-          font-style: normal;
-          font-weight: 400;
-          font-size: 16px;
-          line-height: 26px;
-        }
-        a {
-          max-width: 152px;
-          max-height: 56px;
-          letter-spacing: 1px;
-          text-transform: uppercase;
-          font-family: $fontJ;
-          font-style: normal;
-          font-weight: 500;
-          font-size: 15px;
-          line-height: 22px;
-          border-radius: 8px;
-          text-decoration: none;
-          color: $black;
-          margin: 0 auto 160px;
-        }
-  
-        a:link,
-        a:visited {
-          padding: 18px 25px 16px 24px;
-          background-color: $white;
+        .services__img {
+          height: 489.25px;
+          width: 267.31px;
+          position: absolute;
+          top: 67.85%;
+          left: 78%;
+          transform: translate(-50%, -50%);
         }
       }
     }
@@ -145,9 +154,8 @@ body {
 
       .projects__app__img {
         position: relative;
-        width:541px ;
+        width: 541px;
         height: 308px;
-
 
         .projects__app__text {
           position: absolute;
@@ -172,7 +180,7 @@ body {
 
       .projects__graphic__img {
         position: relative;
-        width:541px ;
+        width: 541px;
         height: 308px;
 
         .projects__graphic__text {
