--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -14,6 +14,7 @@ body {
     justify-content: space-between;
     width: 1111px;
     margin: 65px auto;
+    text-transform: uppercase;
 
     img {
       max-width: 197px;
