add footer contact

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -827,4 +827,8 @@ body .section__solutions div .solutions__img {
   height: 78px;
   width: 255px;
   padding-top: 24px;
+}
+
+.footer__contact {
+  height: 321px;
 }/*# sourceMappingURL=style.css.map */
