--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 /* mixin index*/
 /*mixin aboutUs*/
+/* mixin locations*/
 * {
   margin: 0;
   padding: 0;
@@ -758,23 +759,56 @@ body .section__solutions div .solutions__img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 32px;
+  margin: 0 auto 32px;
+  gap: 30px;
+  margin-top: 64px;
 }
 .section__location__belgium .box {
   background-color: rgb(253, 243, 240);
   height: 326px;
   width: 730px;
   border-radius: 20px;
-  padding-top: 88px;
-  padding-left: 95px;
 }
 .section__location__belgium .box h2 {
   color: rgb(231, 129, 107);
+  margin-bottom: 24px;
+  margin-top: 88px;
+  margin-left: 95px;
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
 }
-.section__location__belgium .box div {
+.section__location__belgium .box .box__txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  margin-left: 95px;
+}
+.section__location__belgium .box .box__txt div {
   height: 78px;
   width: 255px;
-  padding-top: 24px;
+  color: rgb(51, 49, 54);
+}
+.section__location__belgium .box .box__txt div h3 {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+}
+.section__location__belgium .box .box__txt div p {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+.section__location__belgium .box img {
+  height: 326px;
+  width: 350px;
 }
 
 .section__location__australia {
@@ -784,23 +818,55 @@ body .section__solutions div .solutions__img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 32px;
+  margin: 0 auto 32px;
+  gap: 30px;
 }
 .section__location__australia .box {
   background-color: rgb(253, 243, 240);
   height: 326px;
   width: 730px;
   border-radius: 20px;
-  padding-top: 88px;
-  padding-left: 95px;
 }
 .section__location__australia .box h2 {
   color: rgb(231, 129, 107);
+  margin-bottom: 24px;
+  margin-top: 88px;
+  margin-left: 95px;
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
 }
-.section__location__australia .box div {
+.section__location__australia .box .box__txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  margin-left: 95px;
+}
+.section__location__australia .box .box__txt div {
   height: 78px;
   width: 255px;
-  padding-top: 24px;
+  color: rgb(51, 49, 54);
+}
+.section__location__australia .box .box__txt div h3 {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+}
+.section__location__australia .box .box__txt div p {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+.section__location__australia .box img {
+  height: 326px;
+  width: 350px;
 }
 
 .section__location__uk {
@@ -810,23 +876,55 @@ body .section__solutions div .solutions__img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 32px;
+  margin: 0 auto 160px;
+  gap: 30px;
 }
 .section__location__uk .box {
   background-color: rgb(253, 243, 240);
   height: 326px;
   width: 730px;
   border-radius: 20px;
-  padding-top: 88px;
-  padding-left: 95px;
 }
 .section__location__uk .box h2 {
   color: rgb(231, 129, 107);
+  margin-bottom: 24px;
+  margin-top: 88px;
+  margin-left: 95px;
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
 }
-.section__location__uk .box div {
+.section__location__uk .box .box__txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  margin-left: 95px;
+}
+.section__location__uk .box .box__txt div {
   height: 78px;
   width: 255px;
-  padding-top: 24px;
+  color: rgb(51, 49, 54);
+}
+.section__location__uk .box .box__txt div h3 {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+}
+.section__location__uk .box .box__txt div p {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+.section__location__uk .box img {
+  height: 326px;
+  width: 350px;
 }
 
 .footer__contact {
