--- a/src/sass/_partial.scss
+++ b/src/sass/_partial.scss
@@ -4,6 +4,8 @@ $pink: rgba(231, 129, 107, 1);
 $grey: rgba(51, 49, 54, 1);
 $blackL: rgba(51, 49, 54, 1);
 $pinkBg: rgba(253, 243, 240, 1);
+$peach:rgb(255, 173, 155 , 1); 
+
 
 $fontJ: "Jost", sans-serif;
 
