--- a/src/sass/_webdesign.scss
+++ b/src/sass/_webdesign.scss
@@ -67,9 +67,22 @@
       line-height: 26px;
     }
   }
+  .tech__div:hover{
+    background-color: $pink;
+    color: $white;
+    cursor: pointer;
+    h2{
+      color: $white;
+    }
+  }
 }
 .projects__graphic__design {
-
+  background-color: $pink;
+  border-radius: 15px;
+  width:541px;
+  height: 308px;
+  a {
+    @include projectsA;
   .projects__graphic__design__img {
     position: relative;
     width:541px ;
@@ -88,38 +101,58 @@
         @include projectsH;
       }
 
-      a {
-        @include projectsA;
       }
+    }
+  }
+  a:hover{
+    img{
+      opacity: .5;
     }
   }
 }
 .projects__app__design {
+  background-color: $pink;
+  border-radius: 15px;
+  width:541px;
+  height: 308px;
+  a{
 
-  .projects__app__design__img {
-    position: relative;
-    width:541px ;
-    height: 308px;
-
-
-    .projects__app__design__text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      @include projectsT;
-
-      h1 {
-        @include projectsH;
+    .projects__app__design__img {
+      position: relative;
+      width:541px ;
+      height: 308px;
+  
+  
+      .projects__app__design__text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        @include projectsT;
+  
+        h1 {
+          @include projectsH;
+        }
+        p{
+          @include projectsA;
+        }
+  
       }
-
-      a {
-        @include projectsA;
-      }
+    }
+  }
+  a:hover{
+    img{
+      opacity: .5;
     }
   }
 }
 .projects__web__design {
+  background-color: $pink;
+  border-radius: 15px;
+  width:541px;
+  height: 308px;
+  a {
+    @include projectsA;
   .projects__web__design__img {
     position: relative;
     .web{
@@ -139,9 +172,12 @@
         @include projectsH;
       }
 
-      a {
-        @include projectsA;
       }
+    }
+  }
+  a:hover{
+    img{
+      opacity: .5;
     }
   }
 }
